[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noesis-api"
version = "0.2.0"
description = "Official Python SDK for the Noesis on-chain intelligence API — Solana token & wallet analytics."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Noesis" }]
requires-python = ">=3.9"
keywords = ["solana", "noesis", "on-chain", "analytics", "wallet", "token", "pump-fun", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://noesisapi.dev"
Documentation = "https://noesisapi.dev/docs"
Repository = "https://github.com/Rengon0x/NoesisAPI/tree/main/sdks/python"
Issues = "https://github.com/Rengon0x/NoesisAPI/tree/main/sdks/python/issues"

[tool.hatch.build.targets.wheel]
packages = ["noesis"]
