[package]
name = "noesis-api"
version = "0.2.0"
edition = "2021"
authors = ["Noesis"]
description = "Official Rust SDK for the Noesis on-chain intelligence API — Solana token & wallet analytics."
license = "MIT"
repository = "https://github.com/Rengon0x/NoesisAPI/tree/main/sdks/rust"
homepage = "https://noesisapi.dev"
documentation = "https://docs.rs/noesis-api"
readme = "README.md"
keywords = ["solana", "noesis", "on-chain", "analytics", "api"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
