[package]
name = "noesis-api"
version = "0.3.2"
edition = "2021"
rust-version = "1.75"
authors = ["Noesis"]
description = "Official Rust SDK for the Noesis on-chain intelligence API — Solana token & wallet analytics."
license = "MIT"
repository = "https://github.com/Rengon0x/NoesisAPI/tree/main/sdks/rust"
homepage = "https://noesisapi.dev"
documentation = "https://docs.rs/noesis-api"
readme = "README.md"
keywords = ["solana", "noesis", "on-chain", "analytics", "api"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
async-stream = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures-core = { version = "0.3", default-features = false }
